Fix href and add documentation

--- a/media/index.html
+++ b/media/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h1>Vanilla-RustLang-Server - Index</h1>
+    <hr />
     <p>
       Hello! If you see this, then that means that you have successfully set up
       VRS. This is the stock page for the index.html, and you are free to edit
@@ -34,7 +35,7 @@
           >GitHub page</a
         >
       </li>
-      <li><a href="">VRS Documentation</a></li>
+      <li><a href="manual.html">VRS Documentation (User Manual)</a></li>
     </ul>
   </body>
 </html>
