Change HTML directory, update setup and documentation and load.js

--- a/media/404.html
+++ b/media/404.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vanilla-RustLang-Server - Not Found</title>
+    <script type="text/javascript" src="load.js"></script>
   </head>
   <body>
     <h1>Vanilla-RustLang-Server - Not Found</h1>
