--- a/media/manual.html
+++ b/media/manual.html
@@ -5,23 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vanilla-RustLang-Server - User Manual</title>
-    <style>
-      .var {
-        color: brown;
-      }
-
-      .true {
-        color: green;
-      }
-
-      .false {
-        color: red;
-      }
-
-      .type {
-        color: purple;
-      }
-    </style>
+    <script type="text/javascript" src="load.js"></script>
   </head>
   <body>
     <h1>Vanilla-RustLang-Server - User Manual</h1>
@@ -125,7 +109,7 @@
         Specify the directory for your static files (should be the same as the
         <span class="var">ABSOLUTE_STATIC_CONTENT_PATH</span>)
       </li>
-      <li>Run the rest of the script (or exit)</li>
+      <li>Run the rest of the script</li>
     </ol>
     <hr />
     <h2>3. FAQ</h2>
