Update version number to prepare for first release and improve setup script

--- a/media/manual.html
+++ b/media/manual.html
@@ -119,7 +119,8 @@
         </ul>
       </ul>
     </ul>
-    <p></p>
+    <h2>4. setup.sh</h2>
+    <p>This bash script should be run every time you edit (or create) a new static file in the media directory. It copies all the files to the destination directory (the static directory) and clears the logs.</p>
     <h2>5. FAQ</h2>
     <ol>
       <li>
