Proper CORS support
Still no origin validation.

--- a/media/400.html
+++ b/media/400.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <h1>Vanilla-RustLang-Server - Bad Request</h1>
-    <p>Only GET requests are allowed.</p>
+    <p>Something went wrong with your request.</p>
   </body>
 </html>
